--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,16 @@
 #map {
     height: 100vh;
+    z-index: -1;
+}
+#sidebar{
+    height: 100vh;
+    width: 25vw;
+    z-index: 1;
+    background-color: white;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 body{
