--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,11 +1,12 @@
 #map {
-    height: 100vh;
-    z-index: -1;
+    height: 98vh;
+    border: solid black 3px;
+    border-radius: 10px;
 }
+
 #sidebar{
     height: 100vh;
     width: 25vw;
-    z-index: 1;
     background-color: white;
     display: none;
     position: absolute;
@@ -15,5 +16,5 @@
 
 body{
     margin: 0;
-    padding: 0;
+    padding: 5px;
 }
