--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,8 @@
 #map {
     height: 100vh;
+    /* border: solid black 3px;
+    border-radius: 10px; */
+    z-index: 1;
 }
 
 #sidebar{
@@ -10,8 +13,12 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 2;
+    padding: 10px;
+    color: black;
 }
 
 body{
     margin: 0;
+    padding: 0;
 }
