--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,7 +14,8 @@
     top: 0;
     left: 0;
     z-index: 2;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     color: black;
 }
 
