--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,9 +14,14 @@
     top: 0;
     left: 0;
     z-index: 2;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 1%;
+    padding-right: 1%;
     color: black;
+}
+
+#sidebar-title {
+    display: flex;
+    justify-content: space-between;
 }
 
 body{
