--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,6 +5,11 @@
     z-index: 1;
 }
 
+@font-face {
+    font-family: gotham;
+    src: url('../fonts/Gotham-Black.otf');
+}
+
 #sidebar{
     height: 100vh;
     width: 25vw;
@@ -14,14 +19,17 @@
     top: 0;
     left: 0;
     z-index: 2;
-    padding-left: 1%;
-    padding-right: 1%;
+    padding: 0%;
     color: black;
+    font-family: gotham;
 }
 
 #sidebar-title {
     display: flex;
     justify-content: space-between;
+    background-color: antiquewhite;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 body{
